--- a/main.html
+++ b/main.html
@@ -9,7 +9,43 @@
 </head>
 <body>
     <!-- add table here -->
+ <table>
+        <thead>
+            <tr>
+                <th>Subject</th>
+                <th>Marks Obtained</th>
+                <th>Maximum Marks</th>
+                <th>Grade</th>
+            </tr>
+        </thead>
 
+        <tbody>
+            <tr>
+                <td>Mathematics</td>
+                <td>92</td>
+                <td>100</td>
+                <td>A+</td>
+            </tr>
+            <tr>
+                <td>Science</td>
+                <td>88</td>
+                <td>100</td>
+                <td>A</td>
+            </tr>
+            <tr>
+                <td>English</td>
+                <td>81</td>
+                <td>100</td>
+                <td>A</td>
+            </tr>
+            <tr>
+                <td>Computer Science</td>
+                <td>95</td>
+                <td>100</td>
+                <td>A+</td>
+            </tr>
+        </tbody>
+    </table>
         
 </body>
 </html>
